# ChangeLog for dev-ruby/trollop
# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

  22 Sep 2009; James Rowe <jnrowe@gmail.com> trollop-1.14.ebuild:
  Keyworded amd64.

*trollop-1.14 (21 Aug 2009)

  21 Aug 2009; James Rowe <jnrowe@gmail.com> +trollop-1.14.ebuild:
  Version bump [58c].

  12 Jul 2009; James Rowe <jnrowe@gmail.com> trollop-1.13.ebuild:
  Keyworded arm.

  12 Jul 2009; James Rowe <jnrowe@gmail.com> trollop-1.13.ebuild:
  Keyworded amd64.

  12 Jul 2009; James Rowe <jnrowe@gmail.com> trollop-1.13.ebuild:
  Keyworded x86.

  05 Jun 2009; James Rowe <jnrowe@gmail.com> trollop-1.13.ebuild:
  Keyworded ~arm.

*trollop-1.13 (28 May 2009)

  28 May 2009; James Rowe <jnrowe@gmail.com> +trollop-1.13.ebuild,
  +metadata.xml:
  Initial ebuild, by me.
