@@ -3,14 +3,14 @@ Hash: SHA1
 
 DIST trollop-1.13.gem 19456 RMD160 dc32836c683ae9f8d54cf1087154cd19dbb44035 SHA1 8298bce13d0f66eb8cf8e270f6be550054b5fc37 SHA256 1235ba0df184bfdae7cec7e60d04acfa3535aa178b8024fed1f427a1be4616cd
 DIST trollop-1.14.gem 20992 RMD160 98bcf28066412abd3fa295906daeb655c77f4059 SHA1 85af2858ce2ce6733b8c4391aec2bc679df9726e SHA256 c78d984b69736be3f8fc286abd7de039a4fec6895ce343dec0433a832d6d5a96
-EBUILD trollop-1.13.ebuild 315 RMD160 f0298b4424a7ad3ea513347a8405a9355be2dcf1 SHA1 72b725023d001bbcfdcac472a893bfcae64798dc SHA256 7cddbfae702226897c975855f17b15cdf643407745e70a2ae701c0ab4b6fbfc8
-EBUILD trollop-1.14.ebuild 317 RMD160 b2f40e4991fca1816fefd9588010b2b4e97a2329 SHA1 8bb07a9786ca53b68260a9ebde346d4395d38555 SHA256 2c7d99982bba8491dea696978d4bc750e5af7ea95e30813481a7889a0e9fddca
-MISC ChangeLog 800 RMD160 40c15e95bd33907f8a6e633b0aa13dad31502928 SHA1 8d9ea88213a0859ca5a5036c5714452838ceaa4f SHA256 0f5fe769aa0c71622045e41f75e3f158f942888b34572e4f201f637f2c92354b
+EBUILD trollop-1.13.ebuild 311 RMD160 bcd563c2a351e02d6a2fd7dec4b641f302e31d0f SHA1 039eb3164cb6595b31caac9d62fa9711fb4b18e6 SHA256 e569c9dea03e1720e10599e1b977f590b8bdba77ecc03761e4dca909b9a01068
+EBUILD trollop-1.14.ebuild 312 RMD160 f23e71d84b719b1bd16bbce98606d65638d434b1 SHA1 311273f34693c085e59f919c62c727515f820d71 SHA256 23e87f5805f4ea9a05986df549183ed1a2507fa91db221d7dbdec0dae2b7f4b5
+MISC ChangeLog 959 RMD160 79971dbf793ccc550a7c1e21c80c8afbfb480283 SHA1 3d4566716ef5d4bed13f8c9749c52f578d7d4cbb SHA256 56c6564732337fdfd5c555d706fe8c6d9953b43af20e291d6e9cb0f3da8483a9
 MISC metadata.xml 595 RMD160 b65b19f195230f55ebef53ca9a73181ff5460b65 SHA1 ef542e16e9a192f1414b19c76dd56f172bff0e8a SHA256 8d4e5aa14f0fd2ea5cab92293f0b1120dd52644bebc8bef62534ca891ce4653b
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.11 (GNU/Linux)
 
-iEYEARECAAYFAkq4RoMACgkQzJrj3cAXR0mV3ACgqPufqrUVdJe0YIm57Wp2bAm/
-F/QAn3tWKw/oY2V7/rOxHkDR2imCO1yF
-=dWI3
+iEYEARECAAYFAkq4S84ACgkQzJrj3cAXR0liFwCglN6DqdqVs3em7ZRssI/6GPQX
+2+wAn0R37xAjEv5LTrqt0m6UCtdlgINc
+=6KJR
 -----END PGP SIGNATURE-----
