@@ -2,13 +2,13 @@
 Hash: SHA1
 
 DIST blame-1.3.1.tar.gz 483406 RMD160 fef43320fd6148f4543824642d6b2e86227af245 SHA1 9183b9b5f1db0611bda1b724e99957480764bbd7 SHA256 1943b145c0d69d1b3390e9417b76822af0b1bbe53cdaddf76e8497f2e79d58ca
-EBUILD blame-1.3.1.ebuild 755 RMD160 dddaef6c54f1e5c3329bb282349ec161e0df523f SHA1 ed813ef5df6513e4ae7929695a9c5d9d96e1829e SHA256 9a9b4d656717ec44a9a533f34c7901c28692ca7a91975e802f38e471e2dc01de
-MISC ChangeLog 449 RMD160 2eacddf733e883dea696b84f52b23a963d6d5555 SHA1 bd26e38f72f3aa0afd5961764bf1c8b43b86db93 SHA256 2041a765b87a9156dc5e135c397e7a763bc07f5fa98503898a8623fd038bd1af
+EBUILD blame-1.3.1.ebuild 751 RMD160 bffb56f8e1239554c3fdcf72e7d28c4aba371783 SHA1 1c7c746c5c992a640a4e5cdbb5c42fbf9298f724 SHA256 60ec12c201d035b93f17a1ac5efb7e2507c62deb790aa5256a7cde9a73996f39
+MISC ChangeLog 584 RMD160 6b0fbcc159fc3149e2fc6689137670a232f01adb SHA1 fbac2689677bc7a97ffe76b1182d8df9ab276454 SHA256 707433ec64670bed43f447e019f001111f179da50b56e820d71f045a3558e2c5
 MISC metadata.xml 542 RMD160 433243f7702a47d5c6c476b137aa19776102f80b SHA1 2107e1bfaf7c8383697dc6c866edd05e1c5f80cd SHA256 a97736fa923e0548fc4aacbe228b7031ff9a0c8e464e25c0ee2e78d06c654014
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.11 (GNU/Linux)
 
-iEYEARECAAYFAkq1DFcACgkQzJrj3cAXR0mv1wCgpXO6AxrZ+6iRTdUjdpVy0rVU
-lE4AoJJw+oCcHld86/9x7HCSIQXL5xSg
-=bGyh
+iEYEARECAAYFAkq4RykACgkQzJrj3cAXR0lVFwCgkoOvrT3in6Hks4gmiYGvxqZR
+t08AniE9/bY4s4Z3wBlONSPyEhLMXGeT
+=bKI5
 -----END PGP SIGNATURE-----
