@@ -2,13 +2,13 @@
 Hash: SHA1
 
 DIST ditz-0.5.tgz 71338 RMD160 3d48fdda062304f228e0677a5eac7ca5e686af27 SHA1 acdd8d640e84ccbab80f3b61afcf38034886c3c0 SHA256 6edbb0b7faa3e2ba49bacd3c756134b3b5807759564744ecde49e933753fd9be
-EBUILD ditz-0.5-r1.ebuild 784 RMD160 b73b999b08e8a1a1a26f8bf7c4fb4b8a6a82ff5b SHA1 08745740120a640bec513ea01adf7b8021142711 SHA256 83e52ab961701a3fa3192d000d060569025a91161a730a28992543b3b08f7c7c
-MISC ChangeLog 981 RMD160 c11c0d8f2caf4bd6902579cf2f78348c4df9be89 SHA1 6c78960cd64ff7a7b749b8db2e18986b2720dc22 SHA256 c320c518ede2236c28c6721b8f63a68196bd3ee8136704fd4d21fc70add53846
+EBUILD ditz-0.5-r1.ebuild 780 RMD160 e0e0f63135b33fa03f086e4f0c846cafb4ab4ada SHA1 724fee7295a8dfd56291c860b81dce8dd09c460f SHA256 2506b9bd02e549981cd2f299781ef6ce7a0d3bb8443e53ad69493f26c01ae317
+MISC ChangeLog 1116 RMD160 7205642298eadd38e2a13823c6d8631fc41f6902 SHA1 9a46bf18a3fb1c423c3348a2f2b86591b65af538 SHA256 e9054a6420a0d9ddac8d59b4ea1ae9e45bd1d423de105c1ffe460ba96b621553
 MISC metadata.xml 948 RMD160 9a6b3122a40c2e07ec64185bef17aebdfc2fc352 SHA1 e5e035a0e5dd4550c4ea14ca86ae0e37e498601b SHA256 990b20f557f47a247f146174ac840c9daad1a7ea8d774f7399235b0dfcf60f47
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.11 (GNU/Linux)
 
-iEYEARECAAYFAkq1DFgACgkQzJrj3cAXR0mKYwCgkcZ/goyKaBzm4IZS6cApIzYL
-wpoAnieSk1gLnh5Vp8okbmuRgIZ4OYTW
-=jLnC
+iEYEARECAAYFAkq4RzoACgkQzJrj3cAXR0kSJACeKVP2gANupkXB//jmUkLW7ouT
+ijEAnAg100BcHwQhdCoTTttBgxDE4LqH
+=2r9M
 -----END PGP SIGNATURE-----
