@@ -6,7 +6,7 @@ mirror://rubyforge/gems/trollop-1.13.gem
 http://trollop.rubyforge.org
 Ruby
 Provide the maximal amount of GNU-style argument processing in ruby
-amd64 arm x86
+amd64 x86
 eutils gems multilib portability ruby toolchain-funcs
 doc
 
