@@ -6,7 +6,7 @@ mirror://sourceforge/blame/blame-1.3.1.tar.gz
 http://blame.sourceforge.net/
 GPL-2
 Annotates RCS files in a style similar to CVS's annotate command
-amd64 arm x86
+amd64 x86
 
 
 
