@@ -2,6 +2,9 @@
 # Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+  22 Sep 2009; James Rowe <jnrowe@gmail.com> blame-1.3.1.ebuild:
+  Dropped arm keyword, as the package is tracked in the arm overlay.
+
   21 May 2009; James Rowe <jnrowe@gmail.com> blame-1.3.1.ebuild:
   Keyworded amd64.
 
