@@ -2,6 +2,9 @@
 # Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+  22 Sep 2009; James Rowe <jnrowe@gmail.com> ditz-0.5-r1.ebuild:
+  Dropped arm keyword, as the package is tracked in the arm overlay.
+
   19 Jul 2009; James Rowe <jnrowe@gmail.com> ditz-0.5-r1.ebuild:
   Fixed location of man page [c66].
 
