@@ -2,6 +2,10 @@
 # Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+  22 Sep 2009; James Rowe <jnrowe@gmail.com> trollop-1.13.ebuild,
+  trollop-1.14.ebuild:
+  Dropped arm keyword, as the package is tracked in the arm overlay.
+
   22 Sep 2009; James Rowe <jnrowe@gmail.com> trollop-1.14.ebuild:
   Keyworded amd64.
 
